--- a/template.yaml
+++ b/template.yaml
@@ -5,14 +5,13 @@ Description: >
 
   Sample SAM Template for ColorSplashColorDetector
 
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Timeout: 3
 
 Resources:
   ColorSplashPhotoDetectorFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/
       Handler: app.lambda_handler
@@ -25,11 +24,9 @@ Resources:
         - AWSLambdaBasicExecutionRole
       Layers:
         - arn:aws:lambda:us-west-1:325793726646:layer:AWSLambda-Python38-SciPy1x:29
-        # - arn:aws:lambda:us-west-1:015914662809:layer:cv2-python38:4
-        # - arn:aws:lambda:us-west-1:015914662809:layer:sklearn-python38:3
       Events:
         ColorSplashPhotoDetectorApi:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Type: Api
           Properties:
             Path: /getIds
             Method: get
